[package]
name = "rust_encryption"
version = "0.1.0"
edition = "2024"
authors = ["sgj011206"]
description = "Simple file encryption/decryption tool in Rust"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
# コアアルゴリズム(AES-256-GCM)
aes-gcm = "0.10.3"
# 乱数生成
rand = "0.8.5"
# エラー処理
anyhow = "1.0.75"